# hapi

./: TAGS  example-config.yaml  hapi.cabal  stack.yaml
Web/Hapi/: Config.hs  File.hs  Registry.hs  Schema.hs  Types.hs
Web/Hapi/File/: Local.hs
Web/Hapi/Plugin/: Idl.hs  Interface.hs  Manager.hs  Monad.hs
hapi/: HapiAPI.hs  Main.hs
idlc/: Main.hs
plugins/: GitHub.hs
plugins/accuweather/idl/: .#accuweather.idl  accuweather.idl  beam-todo
plugins/github/: GitHub.hs  hapi-github.cabal
plugins/github/Web/Hapi/: GitHub.hs
plugins/github/Web/Hapi/GitHub/: Types.hs
plugins/github/idl/: github.idl
resources/: form.css  form.js
