name: hapi
version: 0.1.0.0
synopsis: Haskell API integration layer
description:
license: MIT
license-file: LICENSE
author: Travis Athougies
maintainer: travis@athougies.net
category: Web
build-type: Simple
cabal-version: >=1.18

library
  exposed-modules: Web.Hapi.Types
                   Web.Hapi.Config
                   Web.Hapi.Schema

                   Web.Hapi.File
                   Web.Hapi.File.Local

                   Web.Hapi.Plugin.Interface
                   Web.Hapi.Plugin.Idl
                   Web.Hapi.Plugin.Monad
                   Web.Hapi.Plugin.Manager

                   Web.Hapi.Registry
  build-depends: base                 >= 4.7 && < 5.0,
                 text                 >= 1.2,
                 bytestring           >= 0.10,
                 servant              >= 0.9,
                 servant-server       >= 0.9,
                 lens,
                 hashable             >= 1.2,
                 unordered-containers >= 0.2,
                 base64-bytestring    >= 1.0,
                 aeson                >= 1.0,
                 containers           >= 0.5,
                 network-uri          >= 2.6,
                 turtle,
                 yaml,
                 optparse-generic,
                 megaparsec,
                 time >= 1.6,
                 scientific >= 0.3,
                 beam-core,
                 beam-migrate,
                 beam-postgres,
                 free >= 4.12,
                 postgresql-simple >= 0.5,
                 resource-pool,
                 mtl >= 2.2,
                 uuid >= 1.3,
                 streaming, streaming-bytestring, streaming-utils, process,
                 pandoc,
                 random-source,
                 attoparsec >= 0.13,
                 stm >= 2.4,
                 wai-extra >= 3.0,
                 filepath >= 1.4,
                 directory >= 1.3,
                 uri-encode >= 1.5,
                 http-types >= 0.9,
                 http-client >= 0.5,
                 http-client-tls >= 0.3,
                 exceptions >= 0.8,
                 memcache,
                 jwt,
                 data-default >= 0.7,
                 case-insensitive >= 1.2,
                 wai,
                 errors >= 2.2,
                 http-api-data >= 0.3,
                 network
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror -dynamic -threaded
  default-extensions: TemplateHaskell, GeneralizedNewtypeDeriving, OverloadedStrings,
                      DeriveGeneric, ScopedTypeVariables, TupleSections, GADTs,
                      TypeFamilies, FlexibleInstances, FlexibleContexts,
                      StandaloneDeriving, TypeApplications, MultiParamTypeClasses,
                      RankNTypes, RecordWildCards, DeriveDataTypeable, DeriveFunctor

executable hapi
  hs-source-dirs: hapi
  main-is: Main.hs
  other-modules:
    HapiAPI
  build-depends: hapi,
                 base              >= 4.7 && < 5.0,
                 servant           >= 0.9,
                 servant-server    >= 0.9,
                 servant-lucid,
                 lucid,
                 text >= 1.2,                       
                 wai               >= 3.2,
                 wai-app-static    >= 3.1,
                 warp              >= 3.2,
                 http-types        >= 0.9,
                 aeson             >= 1.0,
                 network-uri       >= 2.6,
                 postgresql-simple >= 0.5,
                 bytestring,
                 beam-core,
                 beam-postgres,
                 beam-migrate,
                 mtl >= 2.2,
                 lens,
                 resource-pool,
                 optparse-generic,
                 http-api-data >= 0.3,
                 uuid >= 1.3,
                 uri-encode,
                 wai-extra >= 3.0,
                 unordered-containers >= 0.2,
                 base64-bytestring >= 1.0,
                 memcache,
                 case-insensitive >= 1.2,
                 stm >= 2.4,
                 time >= 1.6,
                 network
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror -dynamic -threaded
  default-extensions: DataKinds, TypeOperators, OverloadedStrings, DeriveGeneric,
                      FlexibleContexts, FlexibleInstances, MultiParamTypeClasses

executable hapi-idlc
  hs-source-dirs: idlc
  main-is: Main.hs
  build-depends: hapi,
                 base           >= 4.7 && < 5.0,
                 haskell-src-exts >= 1.18,
                 network-uri >= 2.6,
                 text, lens, time, scientific, unordered-containers >= 0.2
  ghc-options:   -dynamic
  default-extensions: TypeApplications, FlexibleContexts, ScopedTypeVariables,
                      TypeOperators, DefaultSignatures, MultiParamTypeClasses,
                      DataKinds, TypeSynonymInstances, FlexibleInstances,
                      OverloadedStrings